oshi-core-ffm,oshi-benchmark: Stream.toList() (Sonar S6204)
Replace `.collect(Collectors.toList())` with `.toList()` (Java 16+). The
new form is shorter and consistent with the rest of the codebase.

The returned list is unmodifiable, whereas Collectors.toList() returned
an ArrayList in practice. Both are spec-compliant — the Collectors.toList
docs explicitly disclaim mutability guarantees — and no internal caller
mutates the returned list. (The equivalent JNA-side files predate
SonarCloud's new-code window so weren't flagged; same change there is a
follow-up to keep JNA/FFM behaviour identical.)

Spotless dropped the now-unused Collectors imports.